examples/test/testpolicy11010.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11010
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key46: value35
      key35: value26
      key34: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value19
      podSelector:
        matchLabels:
          key37: value40
          key48: value17
